feat(api): add Google Reviews API integration and leads submission endpoint
- Implemented Google Reviews API integration in `src/app/api/google-reviews/route.ts` to fetch place details and reviews.
- Created a new endpoint for submitting leads in `src/app/api/leads/route.ts` with validation for input data.
- Added robots.txt generation in `src/app/robots.ts` to manage crawling rules for search engines.
- Introduced analytics components for Google Analytics tracking in `src/components/analytics/`.
- Developed service worker registration in `src/components/pwa/service-worker-registrar.tsx` for PWA support.
- Added hooks for handling outside click detection and course checkout/refund processes in `src/hooks/`.
- Enhanced course fetching logic in `src/hooks/useCourses.ts` to support filtering and sorting.
- Created metadata management utilities in `src/lib/metadata.ts` for SEO optimization.
- Implemented optional Sanity Vision plugin loading in `src/sanity/optionalVision.ts`.
- Added WhatsApp URL generation utility in `src/utils/whatsapp.ts` for messaging integration.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,20 @@
-# WCAG Dock Accessibility token
-NEXT_PUBLIC_WCAG_ACCESSIBILITY_TOKEN=your-wcag-token
-
-# API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:8000
-
-# Google Analytics and Facebook Pixel
-# NEXT_PUBLIC_GA_ID=your-google-analytics-id
-# NEXT_PUBLIC_FB_PIXEL_ID=your-facebook-pixel-id
+# Google Analytics
+# NEXT_PUBLIC_GA_MEASUREMENT_ID=G-...
+# NEXT_PUBLIC_GOOGLE_TAG_ID=AW-...
 
 # WhatsApp Configuration
-NEXT_PUBLIC_WHATSAPP_PHONE_NUMBER=your-whatsapp-number
+# NEXT_PUBLIC_WHATSAPP_PHONE_NUMBER=034...
 
-# Google OAuth Configuration
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-nextauth-secret-key
+# Sanity CMS configuration
+NEXT_PUBLIC_BASE_URL=https://geesol.com
+NEXT_PUBLIC_SANITY_PROJECT_ID=project_id
+REVALIDATE_SECRET=secret_key
+NEXT_PUBLIC_SANITY_DATASET=production
+
+# n8n leads webhook
+N8N_WEBHOOK_URL=https://n8n.example.com/webhook/lead-contact
+N8N_WEBHOOK_TOKEN=your-webhook-token
+
+# Google Maps testimonials and ratings
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+GOOGLE_PLACE_ID=your-google-place-id(starts with ChI...)
