--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ordinaly Software",
-  "short_name": "Ordinaly", 
+  "name": "Geesol Renovables",
+  "short_name": "Geesol", 
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#22A60D",
