--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "groq": "^4.6.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.26",
     "next": "^16.0.7",
     "next-intl": "^4.1.0",
     "next-sanity": "^11.6.10",
