--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 # Google Analytics
-# NEXT_PUBLIC_GA_MEASUREMENT_ID=G-...
-# NEXT_PUBLIC_GOOGLE_TAG_ID=AW-...
+NEXT_PUBLIC_GOOGLE_TAG_ID=GT-...
 
 # WhatsApp Configuration
 # NEXT_PUBLIC_WHATSAPP_PHONE_NUMBER=034...
@@ -11,10 +10,10 @@ NEXT_PUBLIC_SANITY_PROJECT_ID=project_id
 REVALIDATE_SECRET=secret_key
 NEXT_PUBLIC_SANITY_DATASET=production
 
-# n8n leads webhook
-N8N_WEBHOOK_URL=https://n8n.example.com/webhook/lead-contact
-N8N_WEBHOOK_TOKEN=your-webhook-token
-
 # Google Maps testimonials and ratings
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 GOOGLE_PLACE_ID=your-google-place-id(starts with ChI...)
+
+# n8n leads webhook
+N8N_WEBHOOK_URL=https://n8n.example.com/webhook/lead-contact
+N8N_WEBHOOK_TOKEN=your-webhook-token
